# privax

./: .gitignore  README.md
api/: README.md  docker-compose.yml  requirements.txt  run.py  run_tests.py
api/app/: main.py  models.py  routes.py
api/app/crypto/: note.py
api/tests/: test_api.py  test_note.py
circuits/: .mocharc.json  README.md  app.js  generate_witness.js  package.json  tsconfig.json
circuits/circuits/: main.circom  withdraw.circom
circuits/inputs/: main_input.json
circuits/scripts/: build_constants  compile.sh  proof_generate.sh  ptau_fetch.sh  ptau_phase2.sh  witness.sh
circuits/tests/circuits/: withdraw.test.ts
circuits/utils/: merkleTree.js  merkleTree.ts  test-types.d.ts  types.d.ts
evm-contracts/: .env.example  README.md  hardhat.config.js  package.json
evm-contracts/contracts/: PrivaxProtocol.sol
evm-contracts/contracts/interfaces/: IVerifier.sol
evm-contracts/contracts/mocks/: MockERC20.sol  MockVerifier.sol
evm-contracts/scripts/: deploy.js
evm-contracts/test/: PrivaxProtocol.test.js
relayer/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt  run.py
relayer/app/: api.py  main.py  merkle.py  persistence.py  relayer.py
relayer/scripts/: healthcheck.py
sol-contracts/: Anchor.toml  README.md  package.json  tsconfig.json
sol-contracts/app/: package.json  tsconfig.json
sol-contracts/migrations/: deploy.ts
sol-contracts/programs/privax_protocol/: Cargo.toml
sol-contracts/programs/privax_protocol/src/: lib.rs
sol-contracts/tests/: privax_protocol.ts
(+4 files in other folders)
