[package]
name = "privax_protocol"
version = "0.1.0"
description = "Privacy-focused token transfer protocol using zero-knowledge proofs on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privax_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.9" 